# nomnom

nomnom-api/: .gitignore  Dockerfile  VERSION.md  docker-compose.yml  makefile  pyproject.toml  version.json
nomnom-api/alembic/: env.py
nomnom-api/alembic/versions/: 183c599d30a0_create_user_dish_interactions_table.py  2439a16239bf_create_dishes_table.py  33eb73d9cf84_add_country_and_fruit_material_tag.py  503676800208_add_price_to_dishes.py  76317bb32b74_create_dish_reviews_table.py  80fe0020ba83_create_dish_jobs_table.py  9b2ed84d17a5_add_role_to_users.py  a8a55b0f2e86_add_material_tag_taste_tag_district_to_.py  b0618adff80f_create_achievements_and_user_.py  bc1a916d66d7_create_users_table.py
nomnom-api/app/: main.py
nomnom-api/app/core/: config.py  database.py  image_utils.py  logging_config.py  scheduler.py  security.py  vectorUtils.py
nomnom-api/app/models/: __init__.py  achievement.py  dish.py  dish_job.py  dish_review.py  user.py  user_achievement.py  user_dish_interaction.py
nomnom-api/app/routers/: achievement.py  auth.py  dish.py  image.py  job.py  log.py  user_dish_interaction.py
nomnom-api/app/schemas/: achievement.py  auth.py  dish.py  image.py  user.py  user_dish_interaction.py
nomnom-api/app/services/: achievement_service.py  auth_service.py  dish_review_service.py  dish_service.py  personal_vector_service.py  storage_service.py  user_dish_interaction_service.py  user_service.py
nomnom-web/: .gitignore  VERSION.md  index.html  package.json  vite.config.js
nomnom-web/dev-dist/: sw.js
nomnom-web/scripts/: gen-icons.mjs
(+23 files in other folders)
