[project]
name = "nomnom-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.8",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.51",
    "upstash-redis>=1.7.0",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
