[project]
name = "nomnom-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.8",
    "geoalchemy2>=0.17.1",
    "numpy<2",
    "oci>=2.180.0",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "redis>=7.0.1",
    "sentence-transformers<3.0",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.51",
    "torch==2.2.2",
    "transformers<4.45",
    "upstash-redis>=1.7.0",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
